Edit mode selection lost during new partial unwrap if UV Selection Sync enabled #48082

Closed
opened 2016-04-07 23:39:07 +02:00 by Jean Ayer · 6 comments

System Information
Linux, Windows

Blender Version
2.77

Short description of error
Whole mesh is selected when new UV data added, unwrapping whole mesh. Edit mode selection is lost, not respected during unwrap op.

Exact steps for others to reproduce the error

  1. UV/Edit Selection Sync is enabled, scene setting (tool_settings.use_uv_select_sync)
  2. Object data has no UV Map, i.e. a new cube
  3. Select partial geometry, i.e. one face
  4. Perform unwrap op on partial geometry

First three steps done in this blend: bug_nouv_uvsync_select.blend

**System Information** Linux, Windows **Blender Version** 2.77 **Short description of error** Whole mesh is selected when new UV data added, unwrapping whole mesh. Edit mode selection is lost, not respected during unwrap op. **Exact steps for others to reproduce the error** 1. UV/Edit Selection Sync is enabled, scene setting (tool_settings.use_uv_select_sync) 2. Object data has no UV Map, i.e. a new cube 3. Select partial geometry, i.e. one face 4. Perform unwrap op on partial geometry First three steps done in this blend: [bug_nouv_uvsync_select.blend](https://archive.blender.org/developer/F301314/bug_nouv_uvsync_select.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @vravCodyBurrow

Added subscriber: @vravCodyBurrow

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29
Campbell Barton was assigned by Bastien Montagne 2016-04-08 16:02:10 +02:00

I’d say this is expected behavior, since even if you select/unwrap a single face, all actually get new UV coordinates (at 0,0) and hence get selected in UVEditor… @ideasman42 should know for sure.

I’d say this is expected behavior, since even if you select/unwrap a single face, all actually get new UV coordinates (at 0,0) and hence get selected in UVEditor… @ideasman42 should know for sure.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 90271e7ff1

This issue was referenced by 90271e7ff185b3714c40182db953923567933bae
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48082
No description provided.