Fix T48082: Unwrap overwrites face selection

Sync selection option made adding a new UV layer select all edit-mesh faces.
Now just select the UV's, ignoring sync-select option.